# language-tutor

./: .gitignore  CAPSTONE_READINESS.md  CHECKLIST.md  LAYERS.md  Modelfile  PROVIDERS.md  QUICK_START.md  README.md  TODO.md  capstone_assignment.md  config.gemini.yaml  config.ollama.yaml  config.py  config.test.yaml  config.vertex.yaml  config.yaml  contracts.md  grammar.md  llm_backends.md  memory.md  orchestrator.md  pyproject.toml  requirements.txt  testing.md  vocab.md  writing.md
.agents/: AGENTS.md
docs/: CHECKLIST.md  CHECKLIST_FINISHED.md  DESIGN.md  LAYERS.md  TODO.md  _CHECKLIST.md  _CHECKLIST_FINISHED.md  _TODO.md  _contracts.md  _design.md  _layers.md  competitive_landscape.md  contracts.md  grammar.md  kaggle_writeup_draft.md  lang.md  lang_generation.md  llm_backends.md  memory.md  orchestrator.md  testing.md  ui.md  vocab.md  writing.md
lang/: generate.py  generate_messages.py  generate_prompts.py  loader.py  models.py
llm/: base.py  factory.py  gemini.py  ollama_setup.py  openai_compat.py  vertex.py
memory/: factory.py  json_store.py  protocols.py  schema.sql  sqlite_store.py
modules/: protocols.py  registry.py
orchestrator/: mastery.py  orchestrator.py  prompts.py  protocols.py  session_manager.py
scripts/: check_ollama_model.py  generate_language.py  generate_messages.py  judge_variance.yaml  run_judge_variance.py
shared/: error_log.py  humanize.py  io.py  slugify.py  timer.py
skills/: protocols.py
tests/: test_cli.py  test_llm.py  test_orchestrator.py  test_storage.py  test_writing.py
ui/: app.py  cli.py  mcp_server.py
(+133 files in other folders)
