[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "language-tutor"
version = "0.1.0"
description = "Personal AI-powered Language Tutor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic>=2.0.0",
    "pyyaml",
    "mcp>=1.2.0",
    "flask>=3.0.0",
    "google-genai>=1.0.0"
]

[project.scripts]
ltut = "ui.cli:main"

[tool.setuptools]
packages = ["ui", "llm", "memory", "skills", "modules", "orchestrator", "shared", "lang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "judge_*.py"]
markers = [
    "e2e: end-to-end tests requiring a live LLM; run manually with: pytest tests/e2e/ -v -s",
    "judge: LLM-as-judge evaluation tests; run manually with: pytest tests/judge/ -v -s",
]
